<resources>
    <string name="app_name">GTT</string>
    <string name="app_name_large">Gestión Trabajo Temporal</string>
    <string name="app_version">1.0</string>
    <string name="autor">Autor: Antonio Carrilo Cuenca programacionantonio@gmail.com</string>
    <string name="action_settings">Preferencias</string>
    <string name="dni_usuario">DNI Usuario</string>
    <string name="password">Contraseña</string>
    <string name="repetir_password">Repetir contraseña</string>
    <string name="login">Login</string>
    <string name="link_to_register">¿No estás registardo? Registrate aquí</string>
    <string name="logo">Logo</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="fecha_nacimiento"><u>Fecha nacimiento:</u></string>
    <string name="email">Email</string>
    <string name="telefono">Teléfono</string>
    <string name="dni"><u>Dni:</u></string>
    <string name="registrar">Registrar</string>
    <string name="codigo_operario">Código de operario</string>
    <string name="codigo_operario2Puntos">Código Operario:</string>
    <string name="nombre_operario2Puntos">Nombre Operario:</string>
    <string name="puesto2Puntos">Puesto:</string>
    <string name="turno2Puntos">Turno:</string>
    <string name="comentario2Puntos">Comentario:</string>
    <string name="horasExtras2Puntos">Horas Extras:</string>
    <string name="confirmar_Password">Confirmar Contraseña</string>
    <string name="direccion">Dirección</string>
    <string name="nss"><u>Número S.S:</u></string>
    <string name="titulo_iniciar_sesion">Iniciar sesión</string>
    <string name="titulo_recuperar_password">Recuperar Contraseña</string>
    <string name="titulo_crear_turno">Crear Turno</string>
    <string name="titulo_editar_turno">Editar Turno</string>
    <string name="titulo_editar_fichaje">Editar Fichaje</string>
    <string name="titulo_crear_puesto">Crear Puesto</string>
    <string name="titulo_editar_puesto">Editar Puesto</string>
    <string name="titulo_crear_calendario">Crear Calendario</string>
    <string name="titulo_editar_calendario">Editar Calendario</string>
    <string name="titulo_registro">Regístrate</string>
    <string name="titulo_nomina">Nómina</string>
    <string name="passwordOlvidada">¿Has olvidado tu contraseña?</string>
    <string name="customize">Customize</string>
    <string name="show_dialog">Show Dialog</string>
    <string name="undo">Undo</string>
    <string name="action_search">Buscar</string>
    <string name="crear_turno">Crear Turno</string>
    <string name="crear_puesto">Crear Puesto</string>
    <string name="crear_calendario">Crear nuvo calendario</string>
    <string name="title_activity_settings">Settings</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="borrar">Borrar</string>
    <string name="nombre_turno">Nombre del turno</string>
    <string name="nombre_puesto">Nombre del puesto</string>
    <string name="nombre_calendario">Nombre del calendario</string>
    <string name="descripcion_puesto">Descripción del puesto</string>
    <string name="descripcion_calendario">Descripción del calendario</string>
    <string name="abreviatura_turno">Abreviatura</string>
    <string name="color_fondo">Color del fondo</string>
    <string name="color_texto">Color del texto</string>
    <string name="previsualizacion">Previsualización</string>
    <string name="horario_inicio">Hora inicio:</string>
    <string name="horario_fin">Hora fin:</string>
    <string name="hora_00">00:00</string>
    <string name="turno_partido">Turno partido</string>
    <string name="dias_trabajados">Días trabajados: </string>
    <string name="horas_trabajadas">Horas trabajadas: </string>
    <string name="horas_trabajadas_nocturnas">Nocturnas:</string>
    <string name="horas_trabajadas_extras">Extras:</string>
    <string name="horas_trabajadas_normal">Normal:</string>
    <string name="precio_hora">Precio hora</string>
    <string name="valor_precio_hora">0</string>
    <string name="avisos">Avisos</string>
    <string name="hora">Hora:</string>
    <string name="avisar_dia_antes">Avisar día antes</string>
    <string name="activar_modo_telefono">Activar Modos Teléfono</string>
    <string name="selecionar_sonido">Seleccionar sonido...</string>
    <string name="wifi">Wifi</string>
    <string name="sonido">Sonido</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="iniciar_turno">Iniciar Turno</string>
    <string name="finalizar_turno">Finalizar Turno</string>
    <string name="no_cambiar">No cambiar</string>
    <string name="activar_wifi">Activar WIFI</string>
    <string name="desactivar_wifi">Desactivar WIFI</string>
    <string name="activar_bluetooth">Activar Bluetooth</string>
    <string name="desactivar_bluetooth">Desactivar Bluetooth</string>
    <string name="modo_sonido">Modo Sonido</string>
    <string name="modo_vibracion">Modo Vibración</string>
    <string name="modo_silencio">Modo Silencio</string>
    <string name="€">€</string>
    <string name="title_activity_turnos">Turnos</string>
    <string name="title_activity_turno_detalle">Turno Detalle</string>
    <string name="title_activity_puestos">Puestos</string>
    <string name="title_activity_puesto_detalle">Puesto Detalle</string>
    <string name="title_activity_calendarios">Calendarios</string>
    <string name="title_activity_calendario_detalle">Calendario Detalle</string>
    <string name="title_activity_fichaje_detalle">Fichaje Detalle</string>
    <string name="action_edit">Editar</string>
    <string name="action_delete">Eliminar</string>
    <string name="turnos">Turnos</string>
    <string name="puestos">Puestos</string>
    <string name="calendarios">Calendarios</string>
    <string name="cerrar_dialogo">Cerrar Diálogo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="seleccione_calendario">Seleccione Calendario</string>
    <string name="pref_calendario_predeterminado_title">Calendario predeterminado</string>
    <string name="pref_calendario_predeterminado_summary">Elige el calendario predeterminado</string>
    <string name="seleccione_turno">Seleccione Turno</string>
    <string name="seleccione_puesto">Seleccione Puesto</string>
    <string name="pref_puesto_predeterminado_title">Puesto predeterminado</string>
    <string name="pref_puesto_predeterminado_summary">Elige el puesto predeterminado</string>
    <string name="mensaje_eliminar_turno">¿Está seguro que desea borrar el turno seleccionado? Se borraran todos los fichajes realizados en este turno</string>
    <string name="mensaje_modificar_turno">¿Está seguro que desea modificar el turno seleccionado? Se cambiaran todos los fichajes realizados con este turno</string>
    <string name="mensaje_eliminar_puesto">¿Está seguro que desea borrar el puesto seleccionado? Se borraran todos los fichajes realizados en este puesto</string>
    <string name="mensaje_modificar_puesto">¿Está seguro que desea modificar el puesto seleccionado? Se cambiaran todos los fichajes realizados con este puesto</string>
    <string name="mensaje_modificar_fichaje">¿Está seguro que desea modificar el fichaje seleccionado?</string>
    <string name="mensaje_eliminar_fichaje">¿Está seguro que desea eliminar el fichaje seleccionado?</string>
    <string name="mensaje_eliminar_calendario">¿Está seguro que desea borrar el calendario seleccionado? Se borraran todos los fichajes realizados en este calendario</string>
    <string name="ok">OK</string>
    <string name="error_OnSimpleDialogListener">no implementó OnSimpleDialogListener en la actividad, no en el Fragment</string>
    <string name="error_OnItemClickListener">no se implementó OnItemClickListener en la actividad, no en el Fragment</string>
    <string name="atencion">Atención</string>
    <string name="title_activity_recuperar_password">RecuperarPassword</string>
    <string name="nomina">Nómina:</string>
    <string name="title_activity_nomina_detalle">NominaDetalle</string>
    <string name="fecha_antiguedad"><u>Fecha de antigüedad:</u></string>
    <string name="h_trabajadas">H.Trabaj:</string>
    <string name="horas">Horas</string>
    <string name="tipo_hora">Tipo Hora</string>
    <string name="total">Total</string>
    <string name="numero_horas">Nº horas</string>
    <string name="total_bruto_turno">Total Bruto Turno</string>
    <string name="tiempo_descanso">Tiempo de descanso (min)</string>
    <string name="cero">0</string>
    <string name="total_neto">Total Neto:</string>
    <string name="nomina_neta">Nómina Neto:</string>
    <string name="pref_default_retencion_irpf">2</string>
    <string name="pref_default_retencion_extra">4.7</string>
    <string name="pref_default_retencion_contingencias_comunes">4.7</string>
    <string name="pref_default_retencion_formacion_desempleo_accd">1.7</string>
    <string name="pref_retencion_irpf">Retencion IRPF (02-45%):</string>
    <string name="pref_retencion_extras">Retencion Horas Extras:</string>
    <string name="pref_retencion_contingencias_comunes">Retención Contingencias Comunes:</string>
    <string name="pref_retencion_formacion_desempleo_accd">Retención Formacion/Desempleo:</string>
    <string name="pref_operario_activo">Operario Activo:</string>
    <string name="modo_activar">A</string>
    <string name="modo_desactivar">D</string>
    <string name="modo_no_cambiar">0</string>
    <string name="silencio_modo">S</string>
    <string name="vibrate_modo">V</string>
    <string name="password_no_valido">Password no válido</string>
    <string name="codigo_operario_no_valido">Código de operario no válido</string>
    <string name="campo_vacio">Campo Vacío</string>
    <string name="formato_fecha_correcto">Formato fecha correcto yyyy-MM-dd</string>
    <string name="nss_no_valido">EL NSS no es válido.</string>
    <string name="nss_12_digitos">El NSS debe tener 12 dígitos</string>
    <string name="telefono_no_valido">El teléfono introducido no es válido</string>
    <string name="email_no_valido">Email no válido</string>
    <string name="letra_dni_no_valido">La letra del NIE o NIF no es válida</string>
    <string name="dni_no_valido">El NIE o NIF no es válido. Formato 12345678x</string>
    <string name="password_erroneo">Contraseña erronea</string>
    <string name="operario_no_registrado">Operario no registrado</string>
    <string name="password_caracteres_erroneos">La contraseña debe tener mínimo 8 caracteres, incluir mayúsculas y minúsculas, al menos un número y no debe contener espacios en blanco</string>
    <string name="codigo_operario_erroneo">El Código de operario debe contener 4 dígitos comenzando por 8</string>
    <string name="error_datos_introducido">Error en los datos introducido</string>
    <string name="email_enviado_corectamente">Email enviado correctamente</string>
    <string name="error_enviar_email">Ha ocurrido un erro Email No enviado</string>
    <string name="operario_creado_correctamente">El operario se ha registrado correctamente</string>
    <string name="password_no_coinciden">Las contraseñas no coinciden</string>
    <string name="rellenar_campor_correctamente">Rellene todos los campos correctamente</string>
    <string name="error">Error</string>
    <string name="no_hay_turnos">No hay turnos</string>
    <string name="no_hay_puestos">No hay puestos</string>
    <string name="no_hay_calendarios">No hay calendarios</string>
    <string name="turno_eliminado_correctamente">Turno eliminado correctamente</string>
    <string name="turno_creado_correctamente">Turno creado correctamente</string>
    <string name="version">Versión:</string>
    <string name="derechos_reservados">\u00A9 All rights reserved.</string>
    <string name="acerca_de">App creada para el Proyecto Final del CFGS de Desarrollo de Aplicaciones Multiplataformas.</string>
</resources>