<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.antonio.gestiontrabajotemporal.pantallacalendario.PantallaCalendarioActivity">
    <item
        android:id="@+id/crear_turno"
        android:orderInCategory="100"
        android:title="@string/turnos"
        app:showAsAction="never" />

    <item
        android:id="@+id/crear_puesto"
        android:orderInCategory="100"
        android:title="@string/puestos"
        app:showAsAction="never" />

    <item
        android:id="@+id/crear_calendario"
        android:orderInCategory="100"
        android:title="@string/calendarios"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>
