<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.antonio.gestiontrabajotemporal.ui.MainActivity">
    <!--android:background="@color/colorPrimary"-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <!--android:background="@android:color/background_light">-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip">

            <TextView
                android:id="@+id/txt_IniciarSesion"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/iniciarSesion"
                android:layout_marginBottom="20dip"
                android:textColor="@color/colorPrimary"
                android:textSize="40sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText_CodigoOperarioToLogin"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="20dip"
                    android:layout_marginTop="5dip"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/account_blue"
                    android:drawablePadding="@dimen/activity_horizontal_margin"
                    android:hint="@string/codigo_operario"
                    android:inputType="number"
                    android:labelFor="@+id/editText_CodigoOperarioToLogin"
                    android:maxLength="4"
                    android:maxLines="1"
                    android:theme="@style/colorEditText"
                    android:imeOptions="flagNoExtractUi"/>
                <!-- Color iconos #1E88E5
                 android:imeOptions="flagNoExtractUi" No muestra teclado completo en landScape-->
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText_PasswordToLogin"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="5dip"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/lock_blue"
                    android:drawablePadding="@dimen/activity_horizontal_margin"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:labelFor="@+id/editText_PasswordToLogin"
                    android:maxLines="1"
                    android:theme="@style/colorEditText"
                    android:imeOptions="flagNoExtractUi" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_Login"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginTop="20dip"
                android:layout_weight="1"
                android:text="@string/iniciarSesion" />



            <TextView
                android:id="@+id/txt_LinkToOlvidarPassword"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dip"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/passwordOlvidada"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txt_LinkToRegister"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="40dip"
                android:layout_marginRight="40dip"
                android:layout_marginTop="40dip"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/link_to_register"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px" >
        <requestFocus />
    </LinearLayout>
    <!-- <requestFocus /> Dandole el foco a este layout que esta vacio hacemos que los edittext no tengan el foco al iniciar la app-->

</RelativeLayout>


